--- a/OksGroup/Mortgage/Mortgage.css
+++ b/OksGroup/Mortgage/Mortgage.css
@@ -4,12 +4,10 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 a {
-    text-decoration: none;
     width: 51px;
     height: 16px;
     padding: 10px;
 }
-
 .Green_mort {
     position: relative;
 }
@@ -34,7 +32,6 @@ a {
     margin-left: 306px;
     padding-top: 20px;
 }
-
 .blue {
     font-weight: 700;
 }
@@ -46,7 +43,7 @@ a {
     margin-left: -216px;
 }
 
-.Logo_OKS a {
+.Logo_OKS a{
     color: #222445;
     padding: 25px;
     margin-left: 10px;
@@ -488,15 +485,21 @@ a {
     line-height: 23.44px;
     color: #222445;
 }
+.company{
+    width: 150px;
+}
 .Footer_three h1{
+    margin-left: 10px;
     font-size: 40px;
     line-height: 46.88px;
     color: #9BA2A7;
 }
-.Footer_three p{
+.Footer_three a{
     font-weight: 700;
     font-size: 20px;
     line-height: 23.44px;
+    margin-bottom: 20px;
+    display: block; 
     color: #222445;
 }
 .last_img{
